# linear-regression-with-numpy

./: .gitignore  README.md  pyproject.toml
notebooks/: exploration.ipynb
scripts/: train.py
src/linear_regression/: __init__.py  metrics.py  model.py  preprocessing.py
