[project]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = [
    {name = "shanAweb",email = "shanasif2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "linear_regression", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
