[project]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = [
    {name = "shanAweb",email = "shanasif2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.5,<3.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]

[tool.poetry]
packages = [{include = "linear_regression", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]
